--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -37,7 +37,7 @@
         <p>
             <span>/api/v1/pokemon/&lt;identifiant&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son identifiant dans le Pokédex National<br /><br />
-            <a href="{{ base_url }}api/v1/pokemon/1">Voir la fiche du Pokémon</a>
+            <a href="{{ base_url }}api/v1/pokemon/4">Voir la fiche du Pokémon</a>
         </p>
     </div>
     <div>
@@ -45,15 +45,15 @@
         <p>
             <span>/api/v1/pokemon/&lt;nom&gt;</span><br /><br />
             Permet de récupérer la fiche d'un Pokémon grâce à son nom (français ou anglais)<br /><br />
-            <a href="{{ base_url }}api/v1/pokemon/salameche">Voir la fiche du Pokémon</a>
+            <a href="{{ base_url }}api/v1/pokemon/embrylex">Voir la fiche du Pokémon</a>
         </p>
     </div>
     <div>
-        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/25/regular.png" />
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/19/regular_alola.png" />
         <p>
-            <span>/api/v1/gen/&lt;generation&gt;</span><br /><br />
-            Permet de récupérer la liste de tous les Pokémon d'une génération voulue<br /><br />
-            <a href="{{ base_url }}api/v1/gen/1">Voir les Pokémons de la Gen. 1</a>
+            <span>/api/v1/pokemon/&lt;nom&gt;/&lt;region&gt;</span><br /><br />
+            Permet d'obtenir la forme régionale d'un Pokémon<br /><br />
+            <a href="{{ base_url }}api/v1/pokemon/rattata/alola">Voir Rattata d'Alola</a>
         </p>
     </div>
     <div>
@@ -62,6 +62,22 @@
             <span>/api/v1/pokemon</span><br /><br />
             Permet de récupérer la liste de tous les Pokémons<br /><br />
             <a href="{{ base_url }}api/v1/pokemon">Voir tous les Pokémons</a>
+        </p>
+    </div>
+    <div>
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/25/regular.png" />
+        <p>
+            <span>/api/v1/gen</span><br /><br />
+            Permet de récupérer la liste des différentes générations<br /><br />
+            <a href="{{ base_url }}api/v1/gen">Voir les différentes générations</a>
+        </p>
+    </div>
+    <div>
+        <img src="https://raw.githubusercontent.com/Yarkis01/PokeAPI/images/sprites/909/regular.png" />
+        <p>
+            <span>/api/v1/gen/&lt;generation&gt;</span><br /><br />
+            Permet de récupérer la liste de tous les Pokémon d'une génération voulue<br /><br />
+            <a href="{{ base_url }}api/v1/gen/9">Voir les Pokémons de la Gen. 9</a>
         </p>
     </div>
 </section>
