feat!: Ajout de la page 404 + modification de la structure des assets

--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -1,5 +1,10 @@
 {% extends "base.jinja" %}
 
+{% block style %}
+<link rel="stylesheet" type="text/css" href="/assets/css/homepage/styles.css" />
+<link rel="stylesheet" type="text/css" href="/assets/css/homepage/responsive.css" />
+{% endblock %}
+
 {% block content %}
 <section id="warnings">
     <div class="danger">
