--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -8,10 +8,10 @@
 {% block content %}
 <section id="warnings">
     <div class="danger">
-        <p class="warning__title">L'API est encore en développement...</p>
+        <p class="warning__title">Une erreur ?</p>
         <p class="warning__description">
-            Certaines fonctionnalités / pokémons peuvent ne pas fonctionner, ou tout simplement ne pas être présent.<br />
-            Cela est dû au fait que l'API soit encore en développement, et que ces fonctionalité / pokémons seront rajouter dans de prochaines mises à jour.
+            L'api est encore jeune (même si elle dispose d'un grand jeu de donnés) alors il se peut que certaines données soit erronées.<br />
+            Si vous constatez la moindre erreur, vous pouvez nous la signaler en <a href="https://github.com/Yarkis01/PokeAPI/issues/new?assignees=Yarkis01&labels=invalid+data&template=donn%C3%A9es-invalides.md&title=%5BDATA%5D" target="_blank">cliquant ici</a>.
         </p>
     </div>
 </section>
