refactor: Optimisation des images dans les fichiers HTML

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -22,14 +22,14 @@
         <header>
             <div>
                 <a href="{{ url_for('_home') }}">
-                    <img src="/assets/logo.png" draggable="false" />
+                    <img src="/assets/logo.png" draggable="false" alt="Pokéball" />
                     <p>PokéAPI</p>
                 </a>
             </div>
             <div>
                 <a href="https://github.com/Yarkis01/PokeAPI" target="_blank">
                     <p>Github</p>
-                    <img src="/assets/github.png" draggable="false" />
+                    <img src="/assets/github.png" draggable="false" alt="Logo github" />
                 </a>
             </div>
         </header>
