refactor: Optimisation en tout genre

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="robots" content="index, nofollow" />
         <meta name="description" content="Une simple API Pokémon en français." />
+        <meta name="keywords" content="pokemon pok&eacute;mon api pokeapi" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>PokéAPI - Une simple API Pokémon</title>
