--- a/templates/views/404.jinja
+++ b/templates/views/404.jinja
@@ -22,65 +22,5 @@
 {% endblock %}
 
 {% block javascript %}
-<script>
-    let count   = 0,
-        index   = 0,
-        timer   = undefined,
-        cri     = new Audio('/assets/404/cri.ogg'),
-        body    = document.body,
-        easter  = document.getElementById("easter"),
-        bestpkm = document.getElementById("bestPokemonEver");
-
-    const   bgColors = ["#FF0000", "#FF7F00", "#FFFF00", "#00FF00", "#0000FF", "#4B0082", "#9400D3", "#FFC0CB"],
-            fgColors = ["#FFFFFF", "#FFFFFF", "#000000", "#000000", "#FFFFFF", "#FFFFFF", "#FFFFFF", "#000000"]
-
-    bestpkm.addEventListener('click', () => {
-        if(count < 247) {
-            count++;
-            console.log(`[EGG] Encore un petit effot, il reste ${248 - count} clique(s) !`);
-            return;
-        }
-        cri.play();
-
-        if(window.innerWidth >= 1024) {
-            easter.style.display = "block";
-            body.style.overflow  = "hidden";
-
-            timer = setInterval(animations, 1000);
-        } else {
-            alert('❤ Tyranocif ❤');
-        }
-    });
-
-    easter.addEventListener('click', () => {
-        easter.style.display = "none";
-        body.style.overflow  = "auto";
-
-        clearInterval(timer);
-    })
-
-    function animations() {
-        if(window.innerWidth <= 1024) return easter.click();
-
-        let texts = Array.from(document.getElementsByClassName("easter_text"));
-        texts.forEach(text => {
-            text.style.color = fgColors[index];
-            text.style.left  = Math.floor(Math.random() * window.innerWidth)  + "px";
-            text.style.top   = Math.floor(Math.random() * window.innerHeight) + "px";
-
-            if(texts.length <= 16) {
-                let clone       = text.cloneNode();
-                clone.innerText = text.textContent;
-                easter.appendChild(clone);
-            }
-        })
-
-        easter.style.background = bgColors[index];
-
-        cri.play();
-
-        index++;
-        if(index > bgColors.length) index = 0;
-    }
-</script>
+<script type="text/javascript" src="/assets/js/404.js" defer></script>
 {% endblock %}
