--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -1,5 +1,3 @@
-@import url('animation.css');
-
 #error_page {
     display: flex;
     flex-direction: column;
@@ -104,3 +102,32 @@
 
 #easter_t3-left  {right: 45%;}
 #easter_t3-right {left: 45%; transform: scaleX(-1);}
+
+/* ANIMATIONS */
+
+@keyframes pokeball {
+    from {transform: translateX(-50%);}
+    to   {transform: translateX(-50%) rotateY(180deg);}
+}
+
+@keyframes pulse {
+    0% {
+        scale: 1.0;
+        transform: translateY(-50%) translateX(-50%);
+    }
+
+    33% {
+        scale: 2.0;
+        transform: translateY(-50%) translateX(-50%);
+    }
+    
+    66% {
+        scale: 1.0;
+        transform: translateY(0) translateX(0);
+    }
+
+    100% {
+        scale: 2.0;
+        transform: translateY(0) translateX(0);
+    }
+}
