--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,12 @@
-@import url('fonts.css');
+@font-face {
+    font-family: "Lexend Deca";
+    src: url("../fonts/LexendDeca-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf");
+}
 
 :root {
     --primary-background-color  : #2c3e50;
@@ -49,3 +57,12 @@ footer {
 
 footer p {padding: 16px; font-family: 'Roboto', sans-serif; margin-bottom: 0;}
 footer p a {text-decoration: underline; color: var(--secondary-color);}
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 560px) {
+    header {height: 60px;}
+    header img {width: 32px; height: 32px;}
+    header div a {font-size: 16px;}
+    header div a p {margin: calc(calc(32px - 16px) / 2);}
+}
