--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -188,7 +188,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 16px 2vw 16px 2vw;
+    margin: 16px 2vw;
 }
 
 .warning__title {
